@@ -36,6 +36,10 @@ public interface ICache<K, V>
 
     public void put(K key, V value);
 
+    public boolean putIfAbsent(K key, V value);
+
+    public boolean replace(K key, V old, V value);
+
     public V get(K key);
 
     public void remove(K key);
